gcc/testsuite/rust/rustc/ui/consts/const-eval/field-access-after-const-eval-fail-in-ty.rs
// Regression test for issue #120615.

fn main() {
    [(); loop {}].field; // { dg-error "" "" { target *-*-* } }
}

